--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
 <div class="page clearfix" index>
     <div class="left">
         <h1>Welcome to QingwuBlog!</h1>
-        <small>这里记录着我的前端学习之路</small>
+        <small>这里是清无博客，part of 清无时空！</small>
         <hr>
         <ul>
             {% for post in paginator.posts %}
